# polars-genson

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  incompatible.json  mkdocs.yml  release-plz.toml  sample.json  taplo.toml
bench/: README.md  bench_manual.py  bench_test.py  pyproject.toml
bench/data/: labels.parquet  pp_claims.avsc
genson-cli/: CHANGELOG.md  Cargo.toml  README.md  claims_limits.txt  err1.txt  err2.txt  err3.txt  err4.txt  errL12_PENULTIMATE.txt  errL12_minimal.txt  errL12_penultimate.txt  errL14_minimal.txt  errL14_penultimate.txt  errL14_penultimate_alt.txt  errL16_minimal.txt  errL16_penultimate.txt  errL26_PENULTIMATE_test.txt  errL26_minimal.txt  errL4.txt  errL4_minimal.txt  errL4_penultimate.txt  errL5_PENULTIMATE.txt  errL5_minimal.txt  errL5_penultimate.txt  find_optimal_reductions.sh  l14_penultimate_repro_alt.json  label_limits.txt  out1.json  out2.json  out3.json  out4.json  outL12_PENULTIMATE.json  outL12_minimal.json  outL12_penultimate.json  outL14.json  outL14_PENULTIMATE.json  outL14_minimal.json  outL14_penultimate.json  outL14_penultimate_alt.json  outL16.json  (+15 more)
genson-cli/src/: main.rs
genson-cli/tests/: avro_schemas.rs  claims_fixtures.rs  deep_nested_map_unification.rs  integration.rs  map_encoding.rs  map_max_required_keys.rs  map_max_required_keys_snapshots.rs  map_of_records.rs  map_of_unified_records.rs  map_record.rs  normalise.rs  unify_anyof_scalar.rs  unify_map_max_rk.rs  unify_map_threshold.rs  unify_scalar.rs  wrapping.rs
genson-cli/tests/data/: claims_fixture.json  claims_fixture_unwrapped.json  claims_fixture_x1818_L16.jsonl  claims_fixture_x4_L1.jsonl  claims_fixture_x4_L1_min.jsonl  claims_fixture_x4_L2.json  claims_fixture_x4_L2.jsonl  claims_fixture_x4_L3.json  claims_fixture_x4_L3.jsonl  claims_fixture_x4_L4.json  claims_fixture_x4_L4.jsonl  further_simplified_claims_fixture.json  minimal_misaligned.json  mismatched_simplified_claims_fixture.json  pruned_claims_fixture.json  repro.sh  scalar_union_object_claims_fixture.json  simplified_claims_fixture.json  simplified_pruned_claims_fixture.json  super_simplified_claims_fixture.json
genson-cli/tests/snapshots/: claims_fixtures__claims_c0_p24_ddminv2__avro.snap  claims_fixtures__claims_c0_p24_ddminv2__jsonschema.snap  claims_fixtures__claims_c0_p24_ddminv2__normalize.snap  claims_fixtures__claims_c0_p24_x750_t30__avro.snap  claims_fixtures__claims_c0_p24_x750_t30__jsonschema.snap  claims_fixtures__claims_c0_p24_x750_t30__normalize.snap  claims_fixtures__claims_fixture_l1__avro.snap  claims_fixtures__claims_fixture_l1__jsonschema.snap  claims_fixtures__claims_fixture_l1__normalize.snap  claims_fixtures__claims_fixture_l1_min__avro.snap  claims_fixtures__claims_fixture_l1_min__jsonschema.snap  claims_fixtures__claims_fixture_l1_min__normalize.snap  claims_fixtures__claims_fixture_l2__avro.snap  claims_fixtures__claims_fixture_l2__jsonschema.snap  claims_fixtures__claims_fixture_l2__normalize.snap  claims_fixtures__claims_fixture_l3__avro.snap  claims_fixtures__claims_fixture_l3__jsonschema.snap  claims_fixtures__claims_fixture_l3__normalize.snap  claims_fixtures__claims_fixture_l4__avro.snap  claims_fixtures__claims_fixture_l4__jsonschema.snap  claims_fixtures__claims_fixture_l4__normalize.snap  claims_fixtures__claims_fixture_x1818_l12__avro.snap  claims_fixtures__claims_fixture_x1818_l12__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l12__normalize.snap  claims_fixtures__claims_fixture_x1818_l12_v2__avro.snap  claims_fixtures__claims_fixture_x1818_l12_v2__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l12_v2__normalize.snap  claims_fixtures__claims_fixture_x1818_l14__avro.snap  claims_fixtures__claims_fixture_x1818_l14__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l14__normalize.snap  claims_fixtures__claims_fixture_x1818_l14_v2__avro.snap  claims_fixtures__claims_fixture_x1818_l14_v2__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l14_v2__normalize.snap  claims_fixtures__claims_fixture_x1818_l16__avro.snap  claims_fixtures__claims_fixture_x1818_l16__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l16__normalize.snap  claims_fixtures__claims_fixture_x1818_l26__avro.snap  claims_fixtures__claims_fixture_x1818_l26__jsonschema.snap  claims_fixtures__claims_fixture_x1818_l26__normalize.snap  claims_fixtures__claims_fixture_x1818_l29__avro.snap  (+127 more)
genson-cli/tests/verified/: map_encoding__cli_map_encoding_entries.snap  map_encoding__cli_map_encoding_kv.snap  map_encoding__cli_map_encoding_mapping.snap  map_encoding__cli_wrap_root.snap  map_max_required_keys_snapshots__avro_progression_rk0.snap  map_max_required_keys_snapshots__avro_progression_rk1.snap  map_max_required_keys_snapshots__avro_progression_rk2.snap  map_max_required_keys_snapshots__avro_schema_max_rk_boundary.snap  map_max_required_keys_snapshots__avro_schema_max_rk_nested.snap  map_max_required_keys_snapshots__avro_schema_max_rk_none.snap  map_max_required_keys_snapshots__avro_schema_max_rk_one.snap  map_max_required_keys_snapshots__avro_schema_max_rk_two.snap  map_max_required_keys_snapshots__avro_schema_max_rk_zero.snap  map_max_required_keys_snapshots__normalized_max_rk_boundary.snap  map_max_required_keys_snapshots__normalized_max_rk_nested.snap  map_max_required_keys_snapshots__normalized_max_rk_none.snap  map_max_required_keys_snapshots__normalized_max_rk_one.snap  (+71 more)
genson-core/: CHANGELOG.md  Cargo.toml  README.md
genson-core/src/: lib.rs  normalise.rs  parquet.rs  schema.rs
genson-core/tests/: edge_cases_map_max_rk.rs  integration.rs  normalise.rs  verify.rs
polars-genson-py/: CHANGELOG.md  Cargo.toml  README.md  debug_test_script.py  pyproject.toml
polars-genson-py/examples/: main.py
polars-genson-py/src/: expressions.rs  lib.rs  parquet_io.rs
polars-genson-py/tests/: array_handling_test.py  conftest.py  core_test.py  merge_schemas_test.py  nested_complex_test.py  normalise_test.py  parquet_test.py  polars_schema_test.py  schema_ser_deser_test.py  schema_serialisation_test.py  unify_maps_test.py
(+69 files in other folders)
