[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
panic = "abort"
debug = false
strip = "debuginfo"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[workspace]
members = [
  "genson-core",
  "genson-cli",
  "polars-genson-py"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
genson-rs = "0.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
# Polars integration dependencies  
polars = {version = "0.46.0", features = ["dtype-struct"], default-features = false}
polars-arrow = {version = "0.46.0", default-features = false}
pyo3 = {version = "0.23.4", features = ["extension-module", "abi3-py39"]}
pyo3-polars = {version = "0.20.0", features = ["derive"]}

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Louis Maddox <louismmx@gmail.com>"]
license = "MIT"
