[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "abort"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
panic = "abort"
strip = "symbols"

[workspace]
members = ["genson-cli", "genson-core", "polars-genson-py"]
resolver = "2"

[workspace.dependencies]
# Core dependencies
genson-rs = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Polars integration dependencies  
polars = { version = "0.46.0", features = [
  "dtype-struct",
], default-features = false }
polars-arrow = { version = "0.46.0", default-features = false }
pyo3 = { version = "0.23.4", features = ["abi3-py39", "extension-module"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }

[workspace.package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
