[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "unwind"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
panic = "unwind"
strip = "symbols"

[workspace]
members = [
  "genson-cli",
  "genson-core",
  "polars-genson-py",
  "polars-jsonschema-bridge",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
genson-cli = { path = "genson-cli", version = "0.1.0" }
genson-core = { path = "genson-core", version = "0.1.1" }
polars-genson-py = { path = "polars-genson-py", version = "0.1.0" }
polars-jsonschema-bridge = { path = "polars-jsonschema-bridge", version = "0.1.0" }

# Core dependencies
genson-rs = { branch = "indexmap", features = [
  "preserve_order",
], git = "https://github.com/lmmx/genson-rs" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
# Polars integration dependencies  
polars = { default-features = false, features = [
  "dtype-array",
  "dtype-categorical",
  "dtype-decimal",
  "dtype-struct",
  "object",
], version = "0.50.0" }
polars-arrow = { default-features = false, version = "0.50.0" }
pyo3 = { features = ["abi3-py39", "extension-module"], version = "0.25" }
pyo3-polars = { features = ["derive"], version = "0.23" }

[workspace.package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
