[dependencies]
genson-core = { workspace = true }
serde_json = { workspace = true }

[package]
authors.workspace = true
description = "Command-line interface for JSON schema inference"
edition.workspace = true
license.workspace = true
name = "genson-cli"
version = "0.1.1"

[dev-dependencies]
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
predicates = "3.1.3"
tempfile = "3"
