[dependencies]
genson-core = { features = ["avro"], workspace = true }
serde_json = { workspace = true }

[package]
authors.workspace = true
categories = ["command-line-utilities", "data-structures", "parsing"]
description = "Command-line interface for JSON schema inference"
documentation = "https://docs.rs/genson-cli/"
edition.workspace = true
homepage.workspace = true
keywords = ["cli", "command-line", "inference", "json", "schema"]
license.workspace = true
name = "genson-cli"
readme = "README.md"
repository.workspace = true
version = "0.2.4"

[dev-dependencies]
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
insta = { features = ["json"], version = "1" }
predicates = "3.1.3"
serde = "1"
tempfile = "3"
