[dependencies]
anstream = { workspace = true }
genson-core = { features = ["avro", "parquet"], workspace = true }
serde_json = { workspace = true }

[package]
authors.workspace = true
categories = ["command-line-utilities", "data-structures", "parsing"]
description = "Command-line interface for JSON schema inference"
documentation = "https://docs.rs/genson-cli/"
edition.workspace = true
exclude = ["/err*.txt", "/out*.json", "/tests/*"]
homepage.workspace = true
keywords = ["cli", "command-line", "inference", "json", "schema"]
license.workspace = true
name = "genson-cli"
readme = "README.md"
repository.workspace = true
version = "0.7.3"

[dev-dependencies]
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
insta = { features = ["json"], version = "1" }
predicates = "3.1.3"
serde = "1"
tempfile = "3"

[package.metadata.binstall]
# Generic template — applies to all platforms unless overridden
bin-dir = "{ name }-{ target }-v{ version }"
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/polars-genson/releases/download/genson-cli-v{ version }/genson-cli-{ target }-v{ version }.tar.gz"

# Windows builds: provide both .tar.gz and .zip variants
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/polars-genson/releases/download/genson-cli-v{ version }/genson-cli-x86_64-pc-windows-msvc-v{ version }.zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/polars-genson/releases/download/genson-cli-v{ version }/genson-cli-aarch64-pc-windows-msvc-v{ version }.zip"
