[dependencies]
genson-rs = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}

[package]
name = "genson-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Core library for JSON schema inference using genson-rs"
