[dependencies]
genson-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package]
authors.workspace = true
description = "Core library for JSON schema inference using genson-rs"
edition.workspace = true
license.workspace = true
name = "genson-core"
version = "0.1.1"

[dev-dependencies]
predicates = "3.1.3"
