[dependencies]
# genson-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Vendored from genson-rs
indexmap.workspace = true
mimalloc.workspace = true
rayon.workspace = true
regex.workspace = true
simd-json.workspace = true

[package]
authors.workspace = true
description = "Core library for JSON schema inference using genson-rs"
edition.workspace = true
license.workspace = true
name = "genson-core"
version = "0.1.2"

[dev-dependencies]
predicates = "3.1.3"
