[build-system]
requires = ["maturin>=1.0,<2.0", "patchelf>=0.14", "polars>=0.20.6"]
build-backend = "maturin"

[project]
name = "polars-genson"
version = "0.1.0"
description = "A Polars plugin for JSON schema inference using genson-rs."
readme = "README.md"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
polars = [
  "polars>=1.32.0"
]
polars-lts-cpu = [
  "polars-lts-cpu>=1.32.0"
]
dev = [
  "pdm-bump>=0.9.10",
  "pdm>=2.22.3",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4"
]

[project.urls]
Homepage = "https://github.com/lmmx/polars-genson"
Repository = "https://github.com/lmmx/polars-genson.git"

[tool.maturin]
module-name = "polars_genson._polars_genson"
python-source = "python"
release = true
strip = true

[tool.pytest.ini_options]
markers = [
  "failing: Tests that don't work"
]

[tool.uv]
# Build Rust code in development mode (faster builds)
config-settings = {build-args = "--profile=dev"}
default-groups = ["dev", "debug", "test"]

[dependency-groups]
dev = ["polars>=1.32.3"]
debug = ["pysnooper>=1.2.3"]
test = ["pytest>=8.4.1"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google" # or "numpy" if you prefer
